check rest of inventory for thing to stonecut