@@ -7,10 +7,10 @@ import dev.tr7zw.itemswapper.api.AvailableSlot;
 import dev.tr7zw.itemswapper.api.client.ItemProvider;
 import dev.tr7zw.transition.mc.InventoryUtil;
 import net.minecraft.client.Minecraft;
+import net.minecraft.util.context.ContextKeySet;
+import net.minecraft.util.context.ContextMap;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.util.context.ContextMap;
-import net.minecraft.util.context.ContextKeySet;
 
 public class StonecutterItemProvider implements ItemProvider {
 
@@ -20,18 +20,41 @@ public class StonecutterItemProvider implements ItemProvider {
 
     @Override
     public List<AvailableSlot> findSlotsMatchingItem(Item item, boolean limit) {
-        if (minecraft.player == null) {
+        if (minecraft.player == null || minecraft.level == null) {
             return Collections.emptyList();
         }
 
-        ItemStack selected = InventoryUtil.getSelected(minecraft.player.getInventory());
+        var items = InventoryUtil.getNonEquipmentItems(minecraft.player.getInventory());
+        int selectedSlot = InventoryUtil.getSelectedId(minecraft.player.getInventory());
 
-        if (selected == null || selected.isEmpty()) {
-            return Collections.emptyList();
+        // Prefer the currently selected slot.
+        if (selectedSlot >= 0 && selectedSlot < items.size()) {
+            AvailableSlot selectedResult = findStonecutterSlot(item, items.get(selectedSlot), selectedSlot);
+            if (selectedResult != null) {
+                return List.of(selectedResult);
+            }
         }
 
-        // First spike: hardcode Stone -> Stone Slab.
-        // Later this becomes recipe lookup.
+        // Then search the rest of the normal non-equipment inventory.
+        for (int i = 0; i < items.size(); i++) {
+            if (i == selectedSlot) {
+                continue;
+            }
+
+            AvailableSlot result = findStonecutterSlot(item, items.get(i), i);
+            if (result != null) {
+                return List.of(result);
+            }
+        }
+
+        return Collections.emptyList();
+    }
+
+    private AvailableSlot findStonecutterSlot(Item targetItem, ItemStack inputStack, int inputSlot) {
+        if (inputStack == null || inputStack.isEmpty()) {
+            return null;
+        }
+
         var recipes = minecraft.level.recipeAccess().stonecutterRecipes();
 
         for (var entry : recipes.entries()) {
@@ -45,43 +68,54 @@ public class StonecutterItemProvider implements ItemProvider {
                 continue;
             }
 
-            // Forward: selected input -> target output
-            if (entry.input().test(selected) && recipeResult.getItem() == item) {
+            // Forward: input stack -> target output
+            if (entry.input().test(inputStack) && recipeResult.getItem() == targetItem) {
                 int outputPerCraft = recipeResult.getCount();
+                if (outputPerCraft <= 0) {
+                    continue;
+                }
+
                 int maxStackSize = recipeResult.getMaxStackSize();
 
-                int crafts = Math.min(selected.getCount(), maxStackSize / outputPerCraft);
+                int crafts = Math.min(
+                        inputStack.getCount(),
+                        maxStackSize / outputPerCraft
+                );
+
                 if (crafts <= 0) {
-                    return Collections.emptyList();
+                    return null;
                 }
 
                 ItemStack result = recipeResult.copy();
                 result.setCount(crafts * outputPerCraft);
-                return List.of(new AvailableSlot(STONECUTTER_INVENTORY_ID, 0, result));
+                return new AvailableSlot(STONECUTTER_INVENTORY_ID, inputSlot, result);
             }
 
-            // Reverse: selected output -> target input
-            if (recipeResult.getItem() == selected.getItem()
-                    && entry.input().test(new ItemStack(item))) {
-
+            // Reverse: input stack is recipe output -> target is recipe input
+            if (recipeResult.getItem() == inputStack.getItem()
+                    && entry.input().test(new ItemStack(targetItem))) {
                 int inputNeeded = recipeResult.getCount(); // e.g. 2 slabs -> 1 stone
                 int outputPerCraft = 1;
 
+                if (inputNeeded <= 0) {
+                    continue;
+                }
+
                 int crafts = Math.min(
-                        selected.getCount() / inputNeeded,
-                        item.getDefaultInstance().getMaxStackSize() / outputPerCraft
+                        inputStack.getCount() / inputNeeded,
+                        targetItem.getDefaultInstance().getMaxStackSize() / outputPerCraft
                 );
 
                 if (crafts <= 0) {
-                    return Collections.emptyList();
+                    return null;
                 }
 
-                ItemStack result = new ItemStack(item, crafts * outputPerCraft);
-                return List.of(new AvailableSlot(STONECUTTER_INVENTORY_ID, 0, result));
+                ItemStack result = new ItemStack(targetItem, crafts * outputPerCraft);
+                return new AvailableSlot(STONECUTTER_INVENTORY_ID, inputSlot, result);
             }
         }
 
-        return Collections.emptyList();
+        return null;
     }
 
 }
